--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,12 +1,14 @@
 * {
     margin: 0;
     padding: 0;
+    box-sizing: border-box;
 }
 
 body {
     background-color: #6A040F;
     position: relative;
     height:110vh;
+
 }
 
 
@@ -14,8 +16,8 @@ body {
 
 header {
     background-color: #370617;
-    margin-top: 5vh;
-    height: 10vh;
+    margin-top: 0.9em;
+    height: 5em;
     position: sticky;
     top: 0px;
 }
@@ -53,7 +55,23 @@ a:hover {
 .main-logo {
     cursor: pointer;
     margin: 0.8vh 0 0 0;
+
 }
+
+
+.hamburger {
+    display: none;
+  flex-direction: column;
+  width: 3.5em;
+  justify-content: center;
+  cursor: pointer;
+}
+
+span {
+    border: 0.2em solid #E85D04;
+    margin: 3px 0.2em;
+} 
+
 
 @media screen and (max-width: 1000px) {
     header nav {
@@ -67,8 +85,11 @@ a:hover {
     }
 }
 
-/* @media screen and (max-width: 660px) {
+@media screen and (max-width: 650px) {
     header nav {
         padding: 0 5vw;
     }
-} */
+    .hamburger {
+        display: flex;
+    }
+}
