--- a/styles/styles.css
+++ b/styles/styles.css
@@ -96,21 +96,25 @@ span {
     padding: 1em 1em;
 }
 
+
+
 @media screen and (max-width: 1000px) {
     header nav {
         padding: 0 10vw;
     }
+
 }
 
 @media screen and (max-width: 750px) {
     header nav {
         padding: 0 5vw;
     }
+
 }
 
 @media screen and (max-width: 650px) {
     header nav {
-        padding: 0 5em;
+        padding: 0 6vw;
     }
 
     .main-logo-hidden {
@@ -126,3 +130,4 @@ span {
     }
     
 }
+
