--- a/styles/styles.css
+++ b/styles/styles.css
@@ -123,7 +123,7 @@ span {
     background-color:var(--hero-section-bg);
     border-radius: 2rem;
     width: 80%;
-    height: 100%;
+    height:  80%;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -179,6 +179,11 @@ span {
 
 .downward-arrow {
     padding-top: 10vh;
+    animation-name: down-arrow;
+    animation-duration: 2s;
+    animation-iteration-count: infinite;
+    animation-delay: 2s;
+    animation-direction: alternate;
 }
 
 @keyframes rotate-hi {
@@ -190,6 +195,20 @@ span {
     }    
 }
 
+
+@keyframes down-arrow {
+    0% {
+        transform: translateY(0%)
+    }
+
+    50% {
+        transform: translateY(-20px)
+    }
+
+    100% {
+        transform: translateY(10px)
+    }
+}
 
 /* responsive media */
 
