--- a/styles/styles.css
+++ b/styles/styles.css
@@ -18,6 +18,7 @@ body {
     background-color: var(--body-color);
     position: relative;
     height:110vh;
+
     
 }
 
@@ -37,6 +38,8 @@ header {
     position: sticky;
     top: 0px;
     z-index: 999;
+    width: 100%;
+    
 }
 
 header nav {
@@ -119,10 +122,18 @@ span {
 
 /* main section */
 
+main {
+    max-width: 1200px;
+    padding: 0 2em;
+    margin: 0 auto;
+
+}
+
 .hero-section {
+
     background-color:var(--hero-section-bg);
     border-radius: 2rem;
-    width: 80%;
+    width: 100%;
     height:  80%;
     display: flex;
     flex-direction: column;
@@ -209,6 +220,35 @@ span {
         transform: translateY(10px)
     }
 }
+
+
+
+/* .projects */
+
+.projects-section {
+
+    border-radius: 2rem;
+    background-color: var(--hero-section-bg);
+    height: 80vh;
+    margin: auto;
+
+}
+
+.project1 , .project2, .project3 {
+    background-color: black;
+    height: 2em;
+    color: white;
+}
+
+.list-project {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+    column-gap: 2em;
+    row-gap: 2em;
+    
+}
+
+
 
 /* responsive media */
 
