--- a/styles/styles.css
+++ b/styles/styles.css
@@ -31,6 +31,12 @@ body {
     height: 100%;
 }
 
+.header-wrapper {
+    position: sticky;
+    top: 0px;
+    z-index: 999;
+}
+
 header {
     background-color: var(--nav-bar-color);
     margin-top: 0.9em;
@@ -336,6 +342,72 @@ main {
 
 .view-source a span, .live-demo a span {
     border: none;
+}
+
+
+/* .contact-section */
+
+.contacts-section {
+    height: 100vh;
+    background-color: var(--hero-section-bg);
+    margin: 1em 0;
+    display: flex;
+    gap: 2em;
+
+}
+
+.contact-info {
+    padding: 2em;
+    width: 49%;
+    display: flex;
+    flex-direction: column;
+
+}
+
+.message-box {
+    background-color: var(--nav-bar-color);
+    width: 49%;
+    display: flex;
+    flex-direction: column;
+    padding: 2em;
+    justify-content: center;
+  align-items: center;
+    row-gap: 2em;
+}
+
+
+
+
+.contact-name, .email, .subject, .message {
+    
+
+}
+
+#contact-name, #email, #subject, #message {
+    height: 3em;
+    width: 30em;
+}
+
+#message {
+    height: 20em;
+}
+
+.send-message {
+    display: flex;
+    align-items: center;
+}
+
+.send-message img {
+    width: 32px;
+    height: 32px;
+
+}
+
+.send-message span {
+    border: none;
+}
+.contact-info .contact-me {
+    /* font-size: 5em; */
 }
 
 /* responsive media */
