--- a/styles/styles.css
+++ b/styles/styles.css
@@ -397,6 +397,8 @@ main {
     justify-content: center;
     align-items: center;
     row-gap: 2em;
+    border-radius: 2%;
+    margin: 2em 0;
 }
 
 
@@ -422,8 +424,9 @@ main {
 }
 
 #message {
+    margin: 0 1em;
     resize: none;
-    padding: 7em 8em;
+    padding: 7em 9.6em;
     border-radius: 2%;
 
 }
@@ -431,6 +434,8 @@ main {
 .send-message {
     display: flex;
     align-items: center;
+    border-style: none;
+    border-radius: 4%;
 }
 
 .send-message img {
@@ -493,12 +498,23 @@ main {
     }
 
     .contact-info {
-        padding: 2em;
+        padding: 2%;
         width: 100%;
+        height: 49%;
     }
 
     .message-box {
         width: 100%;
+        height: 49%;
+    }
+
+    #contact-name, #email, #subject, #message {
+        padding: 2em 15em;
+    }
+    
+    #message {
+        padding:9em 17.6em;
+    
     }
 }
 
@@ -528,6 +544,37 @@ main {
         justify-content: center;
         align-items: center;
     } 
+
+    /* .contacts-section */
+    .contact-me {
+        font-size: 80px;
+    }
+    
+    .wanna-chat {
+        font-size: 20px;
+    }
+  
+    .email-icon {
+        width: 48px;
+        height: 48px;
+    }
+    
+    .actual-email {
+        font-size: 20px;
+    }
+
+    #contact-name, #email, #subject, #message {
+
+        padding: 1.5em 12em;
+        /* border: 1px solid var(--nav-text-color); */
+        border-radius: 4%;
+    }
+    
+    #message {
+        padding: 6em 14.6em;
+        border-radius: 2%;
+    
+    }
 }
 
 @media screen and (max-width: 650px) {
@@ -551,6 +598,49 @@ main {
 
     /* .hero-section */
 
+    /* .contacts-section */
+
+
+    .contact-me {
+        font-size: 60px;
+    }
+    
+    .wanna-chat {
+        font-size: 30px;
+    }
+    
+    .contact-email {
+        display: flex;
+        align-items: center;
+    }
+    
+    .email-icon {
+        width: 48px;
+        height: 48px;
+    }
+    
+    .actual-email {
+        font-size: 18px;
+    }
+
+    #contact-name, #email, #subject, #message {
+        margin: 0 1em;
+        padding: 1.3em 7em;
+        /* border: 1px solid var(--nav-text-color); */
+        border-radius: 4%;
+        outline: none;
+        border-style: none;
+        text-align: start;
+    }
+    
+    #message {
+        margin: 0 1em;
+        resize: none;
+        padding: 7em 9em;
+        border-radius: 2%;
+    
+    }
+    
 }
 
 
@@ -576,4 +666,62 @@ main {
         justify-content: center;
         align-items: center;
     } 
+
+     /* .contacts-section */
+
+
+     .contact-me {
+        font-size: 50px;
+    }
+    
+    .wanna-chat {
+        font-size: 25px;
+    }
+    
+    .contact-email {
+        display: flex;
+        align-items: center;
+    }
+    
+    .email-icon {
+        width: 24px;
+        height: 24px;
+    }
+    
+    .actual-email {
+        font-size: 15px;
+    }
+
+    #contact-name, #email, #subject, #message {
+
+        padding: 1.2em 5em;
+        /* border: 1px solid var(--nav-text-color); */
+        border-radius: 4%;
+    }
+    
+    #message {
+        padding: 6em 6.6em;
+        border-radius: 2%;
+    
+    }
+    
+}
+
+@media screen and (max-width: 420px) {
+    
+    /* .contacts-section */
+    
+    #contact-name, #email, #subject, #message {
+        width: 30%;
+        /* padding: 1em 1.3em; */
+        /* border: 1px solid var(--nav-text-color); */
+        border-radius: 4%;
+    }
+    
+    #message {
+        padding: 5em 2.6em;
+        border-radius: 2%;
+    
+    }
+
 }
