--- a/styles/styles.css
+++ b/styles/styles.css
@@ -18,13 +18,17 @@ html {
     --body-color:  rgb(255, 253, 242);
     --nav-bar-color: rgb(255, 253, 242);
     --nav-text-color: rgb(26, 26, 26);
-    --nav-text-color-hover: #D00000;
+    --nav-text-underline: rgb(255, 253, 253);
+    --nav-text-color-hover: rgb(48, 48, 48);
     --hero-text: white;
     --hero-section-bg: rgb(255, 253, 242);
     --hero-section-font-color: rgb(26, 26, 26);
     --header-height: calc(5em + 0.9em);
-    --projects-bg: rgb(136, 136, 136);
-    --projects-font: rgb(26, 26, 26);;
+    --projects-bg: rgb(250, 250, 250);
+    --projects-font: rgb(26, 26, 26);
+    --projects-button-hover-color: rgb(48, 48, 48);
+    --sidebar-bg: rgba(250, 250, 250, 0.432);
+    --message-box-inside: rgb(225, 225, 225);
 }
 
 body {
@@ -85,6 +89,9 @@ li a {
 
 li a:hover {
     color: var(--nav-text-color-hover);
+    text-decoration: underline;
+    text-underline-offset: 7px;
+    background-color: var(--sidebar-bg);
 }
 
 .main-logo:hover {
@@ -130,7 +137,9 @@ span {
     height: 10em;
     top: 100%;
     right: 0%;
-    background-color: transparent;
+    border-radius: 1.5em;
+
+
     padding: 1em 1em;
 }
 
@@ -257,7 +266,7 @@ main {
 }
 
 .project {
-    background-color: var(--projects-bg);
+
     /* height: 20rem; */
     color: var(--projects-font);
     padding: 2rem;
@@ -266,6 +275,8 @@ main {
     border-radius: 2em;
 }
 
+
+
 .list-project {
     display: grid;
 
@@ -273,6 +284,10 @@ main {
     column-gap: 2em;
     row-gap: 2em;
     
+}
+
+.project:hover {
+    background-color: var(--projects-bg);
 }
 
 .project-item-image{
@@ -308,7 +323,7 @@ main {
 
 .tech {
 
-    background-color: #DC2F02;
+    background-color: var(--nav-text-color);
     color: white;
     border: none;
     border-radius: 2em;
@@ -317,8 +332,8 @@ main {
 }
 
 .tech:hover {
-    background-color: #6A040F;  
-    color: #d8572a;
+    background-color: var(--projects-button-hover-color);  
+    color: white;
     cursor: pointer;
 }
 
@@ -350,8 +365,20 @@ main {
     display: flex;
     align-items: center;
     justify-content: center;
+    text-decoration: none;
+    color: var(--nav-text-color);
 
 }
+
+.view-source a span:hover, .live-demo a span:hover {
+    text-decoration: underline;
+    text-decoration-color: var(--nav-text-color-hover);
+    text-underline-offset: 7px;
+
+
+}
+
+
 .view-source a img, .live-demo a img {
     width: 48px;
     height: 48px;
@@ -381,7 +408,7 @@ main {
     display: flex;
     flex-direction: column;
     align-items: flex-start;
-
+    gap: 0.3em;
 }
 
 .contact-me {
@@ -396,10 +423,16 @@ main {
     display: flex;
     align-items: center;
 }
+.actual-email:hover {
+    text-decoration: underline;
+    text-underline-offset: 7px;
+    text-decoration-color: var(--nav-text-color-hover);
+
+}
 
 .email-icon {
-    width: 48px;
-    height: 48px;
+    width: 38px;
+    height: 38px;
 }
 
 .actual-email {
@@ -442,6 +475,7 @@ main {
     outline: none;
     border-style: none;
     text-align: start;
+    background-color: var(--message-box-inside);
 }
 
 #message {
@@ -456,7 +490,17 @@ main {
     display: flex;
     align-items: center;
     border-style: none;
-    border-radius: 4%;
+    border-radius: 6%;
+    background-color: var(--nav-text-color);
+    color: white;
+    cursor: pointer;
+}
+
+.send-message:hover {
+    text-decoration: underline;
+    text-underline-offset: 7px;
+    background-color: rgba(48, 48, 48, 0.918);
+
 }
 
 .send-message img {
@@ -503,9 +547,9 @@ footer {
     /* .project */
 
     .project {
-        background-color: var(--projects-bg);;
+        
         /* height: 20rem; */
-        color: white;
+        color: var(--projects-font);
         padding: 2rem;
         display: flex;
         flex-direction: column;
@@ -592,8 +636,8 @@ footer {
     }
   
     .email-icon {
-        width: 48px;
-        height: 48px;
+        width: 38px;
+        height: 38px;
     }
     
     .actual-email {
@@ -656,10 +700,9 @@ footer {
         align-items: center;
     }
     
-    .email-icon {
-        width: 48px;
-        height: 48px;
-    }
+
+
+
     
     .actual-email {
         font-size: 18px;
