--- a/src/App.css
+++ b/src/App.css
@@ -3,4 +3,15 @@
 @theme {
   --font-unica-one: "Unica One", sans-serif;
   --font-noto-sans: "Noto Sans", sans-serif;
+  --font-open-sans: "Open Sans", sans-serif;
+  --animate-main-fadeIn: fadeIn 1s both; 
+}
+
+@keyframes fadeIn {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
 }
